# c2eo

./: .gitignore  .gitmodules  .rultor.yml  Dockerfile  LICENSE.txt  README.md  a.txt  citation.cff  license.txt  myTestFile.rst  readme.md  readme.ru.md  test.txt
nchuykin/src/: CMakeLists.txt  analyzers.cpp  analyzers.h  codeGenerator.cpp  codeGenerator.h  funcdecl.cpp  generator.cpp  generator.h  main.cpp  matchers.h  stmt.cpp  transform.sh  util.cpp  util.h  vardecl.cpp  vardecl.h
nchuykin/src/eo/: pom.xml
nchuykin/src/tests/: testFunc01.c  testFunc04.c  testFunc05.c  testLoop01.c  testLoop02.c  testVarDeclInt00.c  testVarDeclInt02.c  testVarDeclInt03.c  testVarDeclInt04.c  testVarDeclInt05.c
project/: CMakeLists.txt
project/eo-lib/: pom.xml
project/eo-lib/coperators/: addr-of.eo  address.eo  and.eo  as-bytes.eo  as-char.eo  as-float32.eo  as-float64.eo  as-int16.eo  as-int8.eo  as-string.eo  as-uint16.eo  as-uint32.eo  div.eo  get.eo  gt.eo  gte.eo  if-else.eo  lt.eo  lte.eo  neg.eo  plug.eo  post-dec-float32.eo  post-dec-int32.eo  post-dec-int64.eo  post-dec-int8.eo  post-dec-ptr.eo  post-dec-uint8.eo  post-inc-int16.eo  post-inc-int32.eo  post-inc-int8.eo  post-inc-ptr.eo  post-inc-uint64.eo  pre-dec-float32.eo  pre-dec-int16.eo  pre-dec-int32.eo  pre-dec-int8.eo  pre-dec-uint32.eo  pre-inc-float32.eo  pre-inc-float64.eo  pre-inc-int32.eo  (+16 more)
project/scripts/: build.py  build_c2eo.py  build_eo.py  c2eo-all.py  clang_tidy.py  clean_all.py  clean_before_transpilation.py  code_lines.py  codecov.py  collect_transpiled_code.py  compile.py  csmith.py  download_resources.sh  eo_execute.py  eo_version_update.py  launcher.py  readme.md  readme.ru.md  run.py  settings.py  splitter.py  test.py  test_one.py  test_path.py  test_quick_all.py  test_selected.py  tools.py  transpile.py  transpile_c2eo.py  transpile_с2eo.py  transpiled_code_collector.py  transpiler.py  update-release.py  update_eo_version.py
project/scripts/data/: alias_meta.txt  run.sh.txt  settings.yml
project/scripts/data/config/: without_struct.txt
project/scripts/data/configuration/: configBool  configDouble  configEmpty  configInt  configSwap  configWithoutStruct
project/scripts/data/meta/: aliases.txt  app.txt  plug.txt  run.sh.txt
project/scripts/data/skips/: gcc-compile.txt  gcc.txt  test.txt  testcuite.txt
project/src/transpiler/: CMakeLists.txt  aliases.h  analyzers.cpp  analyzers.h  decl.cpp  decl.h  enum_manager.cpp  enum_manager.h  enumdecl.cpp  enumdecl.h  eo_object.cpp  eo_object.h  funcdecl.cpp  funcdecl.h  function_manager.cpp  function_manager.h  generator.cpp  generator.h  main.cpp  matchers.cpp  matchers.h  memory_manager.cpp  memory_manager.h  process_variables.cpp  process_variables.h  readme.md  record_manager.cpp  record_manager.h  recorddecl.cpp  recorddecl.h  stmt.cpp  stmt.h  tracer.cpp  tracer.h  transpile_helper.cpp  transpile_helper.h  type.cpp  type.h  type_manager.cpp  type_manager.h  (+6 more)
project/src/transpiler/old_source/: decl.cpp  funcdecl.cpp  generator.h  recorddecl.cpp  recorddecl.h  stmt.cpp  stmt.h  vardecl.cpp  vardecl.h
project/tests/any/: cleanAll.py  readme.ru.md  splitter.py  testAll.py  testOne.py  testQuickAll.py  testQuickSelected.py  testSelected.py
project/tests/any/configuration/: configBool  configDouble  configEmpty  configInt  configStruct  configSwap
project/tests/any/result/: README.md  pom.xml  run-all-tmplt.sh  run-one.sh
project/tests/datasets/assignment-operations/: assign-op01.c  assign-op02.c  assign-op03.c  assign-op04.c  assign-op05.c
project/tests/datasets/func-call/: globalFactorial.c  globalFibonacci.c  intNoParam00.c  test01.c  test02.c  voidParam01.c
project/tests/datasets/launcher-set/: README.md  cleanAll.py  readme.md  readme.ru.md  splitter.py  startTest.py  swapBC.c  swapBCA.c  testAll.py  testEmpty.c  testOne.py  testSelected.py  varDeclOnly00.c
project/tests/datasets/start-set/: test03.c  test04.c  test05.c  test06.c  test07.c  testEmpty.c  testFunc03.c  testVarDeclInt00.cpp  testVarDeclInt01.c
project/tests/in_progress/array/: array03.c
project/tests/in_progress/assignmentOperations/: assignOp01.c  assignOp02.c
project/tests/in_progress/circle/: circle2.c  circle3.c  circle4.c
project/tests/in_progress/double/: doubleVarDecl.c
project/tests/in_progress/fibonacci/: fibonacci01.c  fibonacci04.c  fibonacci05.c
project/tests/in_progress/functions/: func03.c  func07.c  function1.c
project/tests/in_progress/staticArray/: staticArray02.c  staticArray09.c  staticArray10.c
project/tests/in_progress/struct/: struct00.c  struct05.c  struct09.c  struct11.c
project/tests/in_progress/union/: some_104.c
project/tests/main/: readme.md
project/tests/main/array/: array01.c  array02.c  array03.c  array04.c  array05.c  array06.c  structArray01.c
project/tests/main/assignmentOperations/: ass01_cmpd_add.c  ass02_cmpd_sub.c  ass03_cmpd_mul.c  ass04_cmpd_div.c  ass05_cmpd_mod.c  assign07.c  assign08.c  assign09.c  assign10.c  assignOp01.c  assignOp02.c
project/tests/main/break_continue/: break01.c  break02.c  break03.c  break04.c  continue01.c  continue02.c  nested_break01.c  nested_break02.c
project/tests/main/cast/: cast01.c  cast02.c  cast03.c  double_cast.c  double_cast_0.c  double_cast_1.c  int_cast.c  int_cast_0.c  int_cast_1.c  long_long_cast.c  long_long_cast_0.c  long_long_cast_1.c  short_cast.c  short_cast_0.c  short_cast_1.c  unsigned_int_cast.c  unsigned_int_cast_0.c  unsigned_int_cast_1.c  unsigned_short_cast.c  unsigned_short_cast_0.c  unsigned_short_cast_1.c
project/tests/main/char/: char01.c  char02.c  char03.c
project/tests/main/circle/: circle1.c  circle2.c  circle3.c  circle4.c
project/tests/main/if/: if01.c  (+12 more)
project/tests/scripts/: big_tests.py  clean.sh  file_tests.py  fun.py  global_tests.py  readme.md  static_tests.py  system_vars.py  test.sh  utests.py
project/tests/unit_tests/: CMakeLists.txt  util_test.cpp
yar/src/: CMakeLists.txt  funcdecl.cpp  generator.cpp  generator.h  main.cpp  matchers.cpp  util.cpp
yar18-10/src/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  util.h
(+2386 files in other folders)
